# majowuji

./: .gitignore  Cargo.toml  DASHBOARD.md  README.md
docs/: DEPLOY.md  you-are-your-own-gym.txt
src/: exercises.rs  lib.rs  main.rs  tips.rs
src/bot/: mod.rs
src/db/: mod.rs
src/ml/: mod.rs  muscle_tracker.rs  predictor.rs  progress_goal.rs  recommender.rs
src/tui/: mod.rs
systemd/: majowuji-bot.service
