[package]
name = "majowuji"
version = "0.1.0"
edition = "2024"
description = "Personal martial arts training tracker with ML predictions"
authors = ["ryazanov"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
rand = "0.8"

# ML (uncomment when needed)
# linfa = "0.7"
# linfa-linear = "0.7"
